k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mpsc-portal-service
  labels:
    app: mpsc-portal
spec:
  type: ClusterIP
  selector:
    app: mpsc-portal
  ports:
  - name: http
    port: 80
    targetPort: 3000
