k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mpsc-portal-ingress
  annotations:
    ingress.kubernetes.io/ssl-redirect: "true"
spec:
  rules:
  - host: exam.mpscsarathi.online
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: mpsc-portal-service
            port:
              number: 80
  - host: mpscsarathi.online
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: mpsc-portal-service
            port:
              number: 80
